--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^4.3.0",
+    "husky": "4.3.0",
     "lint-staged": "^10.4.2",
     "prettier": "^2.5.1"
   }
