--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,9 @@
         "mjs": "never"
       }],
       "react/no-unescaped-entities": "off",
+      "jsx-a11y/label-has-associated-control": "off",
+      "react/require-default-props": "off",
+      "react/jsx-props-no-spreading": "off",
 
       "import/prefer-default-export": "off",
       "react/react-in-jsx-scope": "off"
