--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,49 +1,48 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+        "jsx": true
     },
-    "extends": [
-      "plugin:react/recommended",
-      "airbnb",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "react-hooks",
-        "@typescript-eslint",
-        "prettier"
-    ],
-    "rules": {
-      "import/no-unresolved": "error",
-      "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-      "import/extensions": ["error", "ignorePackages", {
-        "js": "never",
-        "jsx": "never",
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "react-hooks",
+    "@typescript-eslint",
+    "prettier"
+  ],
+  "rules": {
+    "import/extensions": [ "error","ignorePackages",
+      {
         "ts": "never",
-        "tsx": "never",
-        "mjs": "never"
-      }],
-      "react/no-unescaped-entities": "off",
-      "jsx-a11y/label-has-associated-control": "off",
-      "react/require-default-props": "off",
-      "react/jsx-props-no-spreading": "off",
-
-      "import/prefer-default-export": "off",
-      "react/react-in-jsx-scope": "off"
-    },
-    "settings": {
-      "import/resolver": {
-       "typescript": {}
+        "tsx": "never"
       }
+    ],
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+    "react/react-in-jsx-scope": "off",
+
+    "react/no-unescaped-entities": "off",
+    "react/require-default-props": "off",
+    "import/no-unresolved": "error",
+    "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off"
+
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
     }
+  }
 }
