--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.25.0",
+    "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
