feat: Responsive Pages

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.25.0",
     "react-icons": "^4.3.1",
