--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
     "react/require-default-props": "off",
     "import/no-unresolved": "error",
     "import/prefer-default-export": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "react/jsx-props-no-spreading": "off"
 
   },
