--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
     "prettier"
   ],
   "rules": {
+    "react/prop-types": "off",
+    "import/no-extraneous-dependencies": "off",
     "import/extensions": [ "error","ignorePackages",
       {
         "ts": "never",
