--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
     "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^17.0.11",
+    "babel-preset-react-app": "^10.0.1",
     "react": "^17.0.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
@@ -27,8 +28,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "coverage": "react-scripts test --coverage --watchAll=false",
+    "test": "react-scripts test --watch",
+    "test:coverage": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject"
   },
   "husky": {
@@ -49,10 +50,12 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
     "@types/react-input-mask": "2.0.4",
     "@types/styled-components": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "babel-jest": "^27.5.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
@@ -63,7 +66,11 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "4.3.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "lint-staged": "^10.4.2",
-    "prettier": "^2.5.1"
+    "msw": "^0.38.1",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3"
   }
 }
